# lemma-clients

./: .gitignore  README.md
.github/workflows/: ci.yml
clojure/: README.md  deps.edn  lemma_client.clj  lemma_client_test.clj
go/: README.md  go.mod  lemma_client.go  lemma_client_test.go
python/: README.md  lemma_client.py  test_lemma_client.py
rust/: Cargo.toml  README.md
rust/src/: lemma_client.rs
typescript/: README.md  lemma_client.test.ts  lemma_client.ts  package.json
